# ScriptSoup

./: .gitignore
Bash/: tor_node.sh
PowerShell/: Run-LogAnalysis.ps1
Python/: DownloadMITCourses.py  Get-WebsiteLinks.ipynb  MergePasswordFiles.ipynb  Sync-MalpediaLibrary.py  scapy_net_mon.py
Python/NVD_CPE_To_SQLite/: README.md  cpe_to_sqlite.py  requirements.txt  sample_data.csv
Python/ble/: main.py
Python/ffmpeg/: ffmpeg-convert.py  pyproject.toml
Python/monitor_smartctl/: run_smartctl.py
Python/sqlite_to_parquet/: requirements.txt  sqlite_to_parquet.py
Python/system_monitor/: raid_monitor.py  run_smartctl.py  send_mail.py
